# personal-knowledge-base-mcp

./: .env.example  .gitignore  CLAUDE.md  CRITICAL_FACTS.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: challenge.md  emerge.md  ingest-notion-briefing.md
.raw/notion/: 2026-03-28.md  2026-04-10.md
_templates/: source.md
kb/: __init__.py  __main__.py  config.py  db.py  server.py
pkb/: __main__.py  config.py  dates.py  embeddings.py  indexer.py  markdown.py  models.py  schema.sql  search.py  server.py
pkb/templates/: .env.example  .gitignore  CLAUDE.md
scripts/: migrate_drop_status.py  migrate_flatten.py  migrate_temporal_columns.py
tests/: REPORT.md  config.py  conftest.py  requirements.txt  test_dates.py  test_end_to_end.py  test_frontmatter_schema.py  test_graph.py  test_indexer.py  test_ingestion.py  test_mcp_comprehensive.py  test_mcp_server.py  test_retrieval.py  test_search.py  test_synthesis_llm_judge.py
tests/fixtures/: retrieval_cases.yaml
tests/lib/: kb_client.py  llm_judge.py  qmd_client.py  vault_sandbox.py
wiki/: 2026-04-11-kickoff-retrospective.md  claude-code.md  demand-driven-compilation.md  hot.md  index.md  log.md  mempalace.md  obra-superpowers.md  raptor.md  uncomfortable-truths-ai-coding-agents.md
wiki/concepts/: agent-memory.md  ai-coding-agents.md  demand-driven-compilation.md  llm-context-scaling.md  llm-wiki-pattern.md  mcp-ecosystem.md  sqlite-hybrid-search-stack.md
wiki/entities/: claude-code.md  claude-obsidian.md  graphrag.md  mempalace.md  obra-superpowers.md  raptor.md
wiki/questions/: 2026-04-11-kickoff-retrospective.md
wiki/sources/: uncomfortable-truths-ai-coding-agents.md
(+32 files in other folders)
