[project]
name = "pkb-mcp"
version = "0.1.0"
description = "Personal knowledge base MCP server — hybrid search, DAG compilation, Obsidian-compatible"
requires-python = ">=3.11"
dependencies = [
    "apsw>=3.46",
    "sqlite-vec>=0.1.6",
    "voyageai>=0.3.2",
    "mcp[cli]>=1.9.0",
    "uvicorn>=0.30",
    "sse-starlette>=1.8",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
]

[project.scripts]
pkb = "pkb.__main__:main"

[project.optional-dependencies]
bench = ["matplotlib", "anthropic>=0.52"]
test = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "anthropic>=0.52",
    "openai>=1.60",
    "google-genai>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["pkb"]

[tool.hatch.build.targets.wheel.force-include]
"pkb/templates" = "pkb/templates"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
